# lemmon-checker

./: .#proof.pipe  .gitignore  Dockerfile  Dockerfile~  convert_for_donut.py  convert_for_donut.py~  dog.py  donut_train.py  donut_train.py~  fly.toml  lemmon-checker.cabal  lemmon-checker.cabal~  out.json  proof.json  proof.json~  proof.pipe  proof.pipe~  stack.yaml~  template.tex  template.tex~
app/: JsonToPipe.hs  Main.hs  Main.hs~  ModelTest.hs  PipeCheck.hs  PipeToJson.hs  PipeToJson.hs~  Web.hs  Web.hs~
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: lemmon-checker-0.1.0.0-inplace.conf  package.cache
donut-data/: donut_train.py
donut-data/train/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json
src/: FormulaParser.hs  FormulaParser.hs~  LemmonChecker.hs  LemmonChecker.hs~  ModelSemantics.hs  ModelSemantics.hs~  Normalize.hs  Normalize.hs~  OcrLatexToPipe.hs  PipeParse.hs  PipeParse.hs~  PrettyPrint.hs  PrettyPrint.hs~  ProofTypes.hs  ProofTypes.hs~  PropDNF.hs  TruthTable.hs
static/: graph.html  index.html  index.html~  instructions.html  model.html  model.html~  proof.html  proof.html~  prop-dnf.html  prop.html  prop.html~  style.css  style.css~
test/: Tests.hs
